[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game Back Grounds/BnWCityScape.png" type="Texture" id=1]
[ext_resource path="res://Game Back Grounds/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Main Menu" type="Node"]
script = ExtResource( 3 )

[node name="BnWCityScape" type="Sprite" parent="."]
position = Vector2( 499, 183 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="BnWCityScape"]
scale = Vector2( 0.5, 1 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Container" type="Container" parent="."]
anchor_left = 0.472
anchor_top = 0.275
anchor_right = 0.513
anchor_bottom = 0.342
margin_left = 0.178131
margin_top = 0.024231
margin_right = 0.194153
margin_bottom = -0.175781
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 502.122
margin_top = 186.504
margin_right = 690.122
margin_bottom = 312.504
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = -220.0
margin_top = -138.0
margin_right = 220.0
margin_bottom = 137.0
custom_constants/separation = 25

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.34902, 0, 0.109804, 1 )
text = "JOE THE LOW"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 440.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.239216, 0.454902, 0.219608, 1 )
text = "START"
flat = true

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 440.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.827451, 0.00392157, 1, 1 )
text = "LEVELS"
flat = true

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 440.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.486275, 0.00392157, 1, 1 )
text = "HOW TO PLAY"
flat = true

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 440.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.294118, 0.682353, 1 )
text = "CREDITS"
flat = true

[node name="Button5" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 440.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.00392157, 0.215686, 1 )
text = "EXIT"
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
